nginxongke/color-with-gke-ingress.yaml
#------------------------------------------------------------------------
#Copyright [2020] Karthik.V
#
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at

#    http://www.apache.org/licenses/LICENSE-2.0

#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.
#------------------------------------------------------------------------
#Create a cluster in gcloud
#gcloud container clusters create m5

#Configure kubectl with cluster credentials
#gcloud container clusters get-credentials m5

#Apply the workload on the cluster
#kubectl apply -f color-with-gke-ingress.yaml 

#Create three color services
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
      - name: red
        image: gcr.io/${project-id}/color:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 32345
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: red-svc
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 32345
    protocol: TCP
  selector:
    app: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: gcr.io/${project-id}/color:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 32345
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 90
    targetPort: 32345
    protocol: TCP
  selector:
    app: green
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: gcr.io/${project-id}/color:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 32345
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 70
    targetPort: 32345
    protocol: TCP
  selector:
    app: blue
---
#Create an Ingress resource for the app
# Blue svc handles all requests
# Red svc handles /color/red requests
# Green svc handles /color/green requests
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: color-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: blue-svc
          servicePort: 70
      - path: /color/red
        backend:
          serviceName: red-svc
          servicePort: 80
      - path: /color/green
        backend:
          serviceName: green-svc
          servicePort: 90
